--- a/log-in.css
+++ b/log-in.css
@@ -2,4 +2,85 @@
   width: 134px;
   height: 40px;
 }
+.first {
+  display:flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(227, 227, 227);
+  margin-top: 40px;
+  margin-left: 10px;
+  padding: 10px;
+  width: 350px;
 
+}
+.logo {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 38px;
+  margin: 36px;
+}
+.log-in {
+  display: flex;
+  flex-direction: column;
+}
+.id {
+  width: 18px;
+  height: 18px;
+}
+.password {
+  width: 18px;
+  height: 18px;
+}
+.separate-bar { 
+  display: flex;
+  flex-flow:row;
+  margin: 18px;
+  font-size: 13px;
+  font-weight: bold;
+  color:#8e8e8e
+}
+.second-text {
+  margin-left: 9px;
+  margin-right: 9px;
+}
+.login-facebook {
+  display: flex;
+  flex-flow: row;
+  margin: 18px;
+}
+.facebook-login-text {
+  margin-left: 10px;
+}
+.find-pw {
+  font-size: 12px;
+  text-align: center;
+  margin: 12px;
+}
+.second {
+  display:flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(227, 227, 227);
+  margin-top: 10px;
+  margin-left: 10px;
+  padding: 10px;
+  width: 350px;
+}
+.sign-up {
+  color: rgb(8, 132, 255);
+  font-weight: bold ;
+  margin-left: 10px;
+}
+.footer {
+  display:flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  align-content: stretch;
+  margin: 20px;
+}
+.img1, .img2 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
