--- a/log-in.css
+++ b/log-in.css
@@ -1,60 +1,86 @@
-
-.img1, .img2 {
-  width: 134px;
-  height: 40px;
+.whole {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
 }
 .first {
-  display:flex;
+  display: flex;
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  border: 1px solid rgb(227, 227, 227);
   margin-top: 40px;
   margin-left: 10px;
   width: 350px;
-
+  border: 1px solid rgb(227, 227, 227);
 }
 .logo {
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 38px;
   margin-top: 40px;
   margin-bottom: 40px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 38px;
+  color: black;
+}
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: black;
   text-decoration: none;
 }
 .log-in {
   display: flex;
   flex-direction: column;
 }
-.id, .password {
+.id {
+  margin: 3px;
+  padding-left: 10px;
   width: 260px;
   height: 36px;
-  margin: 3px;
-  font-size:12px;
+  font-size: 12px;
   border: 1px solid rgb(222, 222, 222);
   border-radius: 3px;
   border-style: 1px solid rgb(122, 122, 122);
   background-color: rgb(249, 249, 249);
 }
+.id:focus {
+  outline: 1px solid;
+}
+.password {
+  margin: 3px;
+  padding-left: 10px;
+  width: 260px;
+  height: 36px;
+  font-size: 12px;
+  border: 1px solid rgb(222, 222, 222);
+  border-radius: 3px;
+  border-style: 1px solid rgb(122, 122, 122);
+  background-color: rgb(249, 249, 249);
+}
+.password:focus {
+  outline: 1px solid;
+}
 .button {
-  width: 265px;
-  height: 34px;
   margin-top: 14px;
   margin-bottom: 10px;
+  width: 265px;
+  height: 34px;
   background-color: rgb(109, 182, 255);
-  border-style:none;
+  border-style: none;
   border-radius: 8px;
   color: white;
   font-size: 15px;
   font-weight: bolder;
+  cursor: pointer;
 }
-.separate-bar { 
+.separate-bar {
   display: flex;
-  flex-flow:row;
+  flex-flow: row;
   margin-top: 10px;
   margin-bottom: 14px;
   font-size: 13px;
   font-weight: bold;
-  color:#8e8e8e
+  color: #8e8e8e;
 }
 .second-text {
   margin-left: 15px;
@@ -72,45 +98,49 @@
   text-decoration: none;
 }
 .find-pw {
-  font-size: 12px;
-  text-align: center;
   margin-bottom: 20px;
   margin-top: 25px;
+  font-size: 12px;
+  text-align: center;
 }
 .second {
-  display:flex;
+  display: flex;
   flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
-  border: 1px solid rgb(227, 227, 227);
   margin-top: 10px;
   margin-left: 10px;
   padding-top: 30px;
   padding-bottom: 30px;
   width: 350px;
+  border: 1px solid rgb(227, 227, 227);
 }
 .desc {
   font-size: 14px;
 }
 .sign-up {
-  color: rgb(8, 132, 255);
-  font-weight: bold ;
   margin-left: 10px;
+  font-weight: bold;
   font-size: 15px;
+  color: rgb(8, 132, 255);
 }
 .footer {
-  display:flex;
+  display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  justify-content: center;
   align-content: stretch;
+  justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  width: 350px;
 }
 .footer-text {
   font-size: 14px;
 }
-.img1, .img2 {
+.img1,
+.img2 {
   padding-top: 20px;
   padding-bottom: 20px;
+  width: 134px;
+  height: 40px;
 }
